--- a/permafrost_benchmark_system/data/relationships.yaml
+++ b/permafrost_benchmark_system/data/relationships.yaml
@@ -1,15 +1,33 @@
 # A dictionary of ILAMB longnames and benchmark data sources associated
 # with a CMIP5 variable.
 
-albedo: Albedo/CERES
-biomass: Biomass/GlobalCarbon
-gpp: GrossPrimaryProduction/Fluxnet-MTE
-lai: LeafAreaIndex/AVHRR
-le: LatentHeat/Fluxnet-MTE
-nee: NetEcosystemExchange/GBAF
+albedo:
+  long_name: Albedo
+  benchmark_source: CERES
+biomass:
+  long_name: Biomass
+  benchmark_source: GlobalCarbon
+gpp:
+  long_name: GrossPrimaryProduction
+  benchmark_source: Fluxnet-MTE
+lai:
+  long_name: LeafAreaIndex
+  benchmark_source: AVHRR
+le:
+  long_name: LatentHeat
+  benchmark_source: Fluxnet-MTE
+nee:
+  long_name: NetEcosystemExchange
+  benchmark_source: GBAF
 nep:
-pr: Precipitation/GPCP2
+pr:
+  long_name: Precipitation
+  benchmark_source: GPCP2
 reco:
-rsds: SurfaceDownwardSWRadiation/CERES
+rsds:
+  long_name: SurfaceDownwardSWRadiation
+  benchmark_source: CERES
 rsus:
-tas: SurfaceAirTemperature/CRU
+tas:
+  long_name: SurfaceAirTemperature
+  benchmark_source: CRU
