Update unit tests and test data

--- a/permafrost_benchmark_system/data/ilamb.cfg
+++ b/permafrost_benchmark_system/data/ilamb.cfg
@@ -1,4 +1,4 @@
-# Benchmark CMIP5-compatible model outputs against all available benchmarks.
+# Benchmark CMIP5-compatible model outputs against available datasets.
 
 [h1: Permafrost Benchmark System]
 bgcolor = "#FFECE6"
