--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
   - conda config --set always_yes yes --set changeps1 no
   - conda install python=$TRAVIS_PYTHON_VERSION
   - conda install numpy nose pyyaml netcdf4
-  - pip install coveralls
+  - pip install coveralls basic-modeling-interface
 
 install:
   - python setup.py install
