--- a/.bmi/benchmark_ingest_tool/parameters.yaml
+++ b/.bmi/benchmark_ingest_tool/parameters.yaml
@@ -1,43 +1,14 @@
-ingest_file1:
-  description: Benchmark file 1 (required)
+ingest_files:
+  description:
+    A list of benchmark data files to ingest
   value:
-    type: file
-    default: 'Off'
-    files:
-      - 'Off'
-ingest_file2:
-  description: Benchmark file 2
-  value:
-    type: file
-    default: 'Off'
-    files:
-      - 'Off'
-ingest_file3:
-  description: Benchmark file 3
-  value:
-    type: file
-    default: 'Off'
-    files:
-      - 'Off'
-ingest_file4:
-  description: Benchmark file 4
-  value:
-    type: file
-    default: 'Off'
-    files:
-      - 'Off'
-ingest_file5:
-  description: Benchmark file 5
-  value:
-    type: file
-    default: 'Off'
-    files:
-      - 'Off'
+    type: list
+    default: []
 make_public:
   description: Allow others to use these benchmark datasets?
   value:
     type: choice
-    default: 'Yes'
+    default: true
     choices:
-      - 'Yes'
-      - 'No'
+      - true
+      - false
