--- a/.bmi/benchmark_ingest_tool/parameters.yaml
+++ b/.bmi/benchmark_ingest_tool/parameters.yaml
@@ -12,6 +12,21 @@ dest_dir:
     type: string
     default: DATA
 
+link_dir:
+  description:
+    Directory relative to ILAMB_ROOT where benchmark datasets are
+    linked (optional)
+  value:
+    type: string
+    default: ''
+
+study_name:
+  description:
+    Name of modeling project or study; e.g., CMIP5 (optional)
+  value:
+    type: string
+    default: ''
+
 ingest_files:
   description:
     A list of benchmark data files to ingest
