Update dependencies in Travis CI file

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ before_install:
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda install python=$TRAVIS_PYTHON_VERSION
-  - conda install numpy nose pyyaml netcdf4 markdown
-  - pip install coveralls basic-modeling-interface
+  - conda install numpy nose netcdf4
+  - pip install coveralls
 
 install:
   - python setup.py install
