--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda install python=$TRAVIS_PYTHON_VERSION
-  - conda install numpy nose netcdf4
+  - conda install numpy nose netcdf4 pyyaml
   - pip install coveralls
 
 install:
