--- a/pbs_server/data/cmip5-variables.yaml
+++ b/pbs_server/data/cmip5-variables.yaml
@@ -7,6 +7,9 @@ albedo:
 biomass:
   long_name: Biomass
   benchmark_source: GlobalCarbon
+et:
+  long_name: Evapotranspiration
+  benchmark_source: MODIS
 gpp:
   long_name: GrossPrimaryProduction
   benchmark_source: Fluxnet-MTE
