Add template for biomes
Also include entry for biomes in cmip5-variables.yaml and update
unit tests.

--- a/pbs_server/data/cmip5-variables.yaml
+++ b/pbs_server/data/cmip5-variables.yaml
@@ -7,6 +7,9 @@ albedo:
 biomass:
   long_name: Biomass
   benchmark_source: GlobalCarbon
+biomes:
+  long_name: Biomes
+  benchmark_source: GFED
 et:
   long_name: Evapotranspiration
   benchmark_source: MODIS
